[package]
name = "vst_window"
version = "0.3.0"
authors = ["Anton Lazarev <https://antonok.com>"]
edition = "2018"
description = "Cross-platform windowing library for VST plugins"
repository = "https://github.com/antonok-edm/vst_window"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["vst", "window", "plugin", "cross-platform", "audio"]
categories = ["external-ffi-bindings", "gui", "os"]

[lib]
crate-type = ["lib"]

[features]
default = ["windows-error"]

[dependencies]
raw-window-handle = "^ 0.4"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"

[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
x11rb = { version = "0.9", features = ["allow-unsafe-code"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "^ 0.22"
objc = { version = "^ 0.2", features = ["exception"] }
lazy_static = "1.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "^ 0.3.9", features = ["windowsx"] }
windows-error = { version = "1.1", optional = true }
wchar = "0.11"
lazy_static = "1.4"

[dev-dependencies]
vst = "^ 0.2.0"

[[example]]
name = "basic"
crate-type = ["cdylib"]
